Handle wildcard parameter in ResourceQuota list API (#427)