@@ -45,17 +45,7 @@ class ResourceQuotaServiceTest {
     ConnectorService connectorService;
 
     @Test
-    void findByNamespace() {
-        Namespace ns = Namespace.builder()
-            .metadata(Metadata.builder()
-                .name("namespace")
-                .cluster("local")
-                .build())
-            .spec(Namespace.NamespaceSpec.builder()
-                .connectClusters(List.of("local-name"))
-                .build())
-            .build();
-
+    void shouldFindQuota() {
         ResourceQuota resourceQuota = ResourceQuota.builder()
             .metadata(Metadata.builder()
                 .cluster("local")
@@ -67,14 +57,11 @@ class ResourceQuotaServiceTest {
         when(resourceQuotaRepository.findForNamespace("namespace"))
             .thenReturn(Optional.of(resourceQuota));
 
-        Optional<ResourceQuota> resourceQuotaOptional =
-            resourceQuotaService.findByNamespace(ns.getMetadata().getName());
-        assertTrue(resourceQuotaOptional.isPresent());
-        assertEquals("test", resourceQuotaOptional.get().getMetadata().getName());
+        assertEquals(Optional.of(resourceQuota), resourceQuotaService.findForNamespace("namespace"));
     }
 
     @Test
-    void findByNamespaceEmpty() {
+    void shouldGetQuotasWhenEmpty() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -88,13 +75,71 @@ class ResourceQuotaServiceTest {
         when(resourceQuotaRepository.findForNamespace("namespace"))
             .thenReturn(Optional.empty());
 
-        Optional<ResourceQuota> resourceQuotaOptional =
-            resourceQuotaService.findByNamespace(ns.getMetadata().getName());
-        assertTrue(resourceQuotaOptional.isEmpty());
+        assertTrue(resourceQuotaService.findForNamespace(ns.getMetadata().getName()).isEmpty());
     }
 
     @Test
-    void findByName() {
+    void shouldListQuotasWithoutParameter() {
+        ResourceQuota resourceQuota = ResourceQuota.builder()
+            .metadata(Metadata.builder()
+                .cluster("local")
+                .namespace("namespace")
+                .name("quotaName")
+                .build())
+            .spec(Map.of(COUNT_TOPICS.toString(), "1"))
+            .build();
+
+        when(resourceQuotaRepository.findForNamespace("namespace"))
+            .thenReturn(Optional.of(resourceQuota));
+
+        assertEquals(List.of(resourceQuota),
+            resourceQuotaService.findByWildcardName("namespace", "*"));
+    }
+
+    @Test
+    void shouldListQuotasWithNameParameter() {
+        ResourceQuota resourceQuota = ResourceQuota.builder()
+            .metadata(Metadata.builder()
+                .cluster("local")
+                .namespace("namespace")
+                .name("quotaName")
+                .build())
+            .spec(Map.of(COUNT_TOPICS.toString(), "1"))
+            .build();
+
+        when(resourceQuotaRepository.findForNamespace("namespace"))
+            .thenReturn(Optional.of(resourceQuota));
+
+        assertEquals(List.of(resourceQuota),
+            resourceQuotaService.findByWildcardName("namespace", "quotaName"));
+        assertTrue(resourceQuotaService.findByWildcardName("namespace", "not-found").isEmpty());
+    }
+
+    @Test
+    void shouldListQuotasWithWildcardNameParameter() {
+        ResourceQuota resourceQuota = ResourceQuota.builder()
+            .metadata(Metadata.builder()
+                .cluster("local")
+                .name("quotaName")
+                .namespace("namespace")
+                .build())
+            .spec(Map.of(COUNT_TOPICS.toString(), "1"))
+            .build();
+
+        when(resourceQuotaRepository.findForNamespace("namespace"))
+            .thenReturn(Optional.of(resourceQuota));
+
+        assertEquals(List.of(resourceQuota),
+            resourceQuotaService.findByWildcardName("namespace", "*"));
+        assertEquals(List.of(resourceQuota),
+            resourceQuotaService.findByWildcardName("namespace", "quota????"));
+        assertEquals(List.of(resourceQuota),
+            resourceQuotaService.findByWildcardName("namespace", "*Name"));
+        assertTrue(resourceQuotaService.findByWildcardName("namespace", "not-quotaName?").isEmpty());
+    }
+
+    @Test
+    void shouldFindByName() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -123,7 +168,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void findByNameWrongName() {
+    void shouldFindByNameWrongName() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -151,7 +196,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void findByNameEmpty() {
+    void shouldFindByNameWhenEmpty() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -171,7 +216,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void create() {
+    void shouldCreateQuota() {
         ResourceQuota resourceQuota = ResourceQuota.builder()
             .metadata(Metadata.builder()
                 .cluster("local")
@@ -189,7 +234,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void delete() {
+    void shouldDeleteQuota() {
         ResourceQuota resourceQuota = ResourceQuota.builder()
             .metadata(Metadata.builder()
                 .cluster("local")
@@ -205,7 +250,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateNewQuotaAgainstCurrentResourceSuccess() {
+    void shouldValidateNewQuotaAgainstCurrentResourceSuccess() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -253,7 +298,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateNewQuotaAgainstCurrentResourceForCountTopics() {
+    void shouldValidateNewQuotaAgainstCurrentResourceForCountTopics() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -299,11 +344,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateNewResourceQuota(ns, resourceQuota);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"2\" for field \"count/topics\": quota already exceeded (3/2).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateNewQuotaAgainstCurrentResourceForCountPartitions() {
+    void shouldValidateNewQuotaAgainstCurrentResourceForCountPartitions() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -358,11 +403,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateNewResourceQuota(ns, resourceQuota);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"10\" for field \"count/partitions\": quota already exceeded (19/10).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateNewQuotaDiskTopicsFormat() {
+    void shouldValidateNewQuotaDiskTopicsFormat() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -384,11 +429,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateNewResourceQuota(ns, resourceQuota);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"10\" for field \"disk/topics\": value must end with either B, KiB, MiB or GiB.",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateNewQuotaAgainstCurrentResourceForDiskTopics() {
+    void shouldValidateNewQuotaAgainstCurrentResourceForDiskTopics() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -435,11 +480,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateNewResourceQuota(ns, resourceQuota);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"5000B\" for field \"disk/topics\": quota already exceeded (8.79KiB/5000B).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateNewQuotaAgainstCurrentResourceForCountConnectors() {
+    void shouldValidateNewQuotaAgainstCurrentResourceForCountConnectors() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -466,11 +511,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateNewResourceQuota(ns, resourceQuota);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"1\" for field \"count/connectors\": quota already exceeded (2/1).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateUserQuotaFormatError() {
+    void shouldValidateUserQuotaFormatError() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -491,13 +536,13 @@ class ResourceQuotaServiceTest {
 
         assertEquals(2, validationErrors.size());
         assertEquals("Invalid value \"producer\" for field \"user/producer_byte_rate\": value must be a number.",
-            validationErrors.get(0));
+            validationErrors.getFirst());
         assertEquals("Invalid value \"consumer\" for field \"user/consumer_byte_rate\": value must be a number.",
             validationErrors.get(1));
     }
 
     @Test
-    void validateUserQuotaFormatSuccess() {
+    void shouldValidateUserQuotaFormatSuccess() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -519,7 +564,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getCurrentUsedResourceForCountTopicsByNamespace() {
+    void shouldGetCurrentUsedResourceForCountTopicsByNamespace() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -559,7 +604,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getCurrentUsedResourceForCountPartitionsByNamespace() {
+    void shouldGetCurrentUsedResourceForCountPartitionsByNamespace() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -608,7 +653,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getCurrentUsedResourceForCountConnectorsByNamespace() {
+    void shouldGetCurrentUsedResourceForCountConnectorsByNamespace() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -629,7 +674,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getCurrentUsedResourceForDiskTopicsByNamespace() {
+    void shouldGetCurrentUsedResourceForDiskTopicsByNamespace() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -680,7 +725,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateTopicQuota() {
+    void shouldValidateTopicQuota() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -756,7 +801,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateTopicQuotaNoQuota() {
+    void shouldValidateTopicQuotaNoQuota() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -785,7 +830,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateTopicQuotaExceed() {
+    void shouldValidateTopicQuotaExceed() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -858,7 +903,7 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateTopicQuota(ns, Optional.empty(), newTopic);
         assertEquals(3, validationErrors.size());
         assertEquals("Invalid \"apply\" operation: exceeding quota for count/topics: 3/3 (used/limit).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
         assertEquals("Invalid \"apply\" operation: exceeding quota for count/partitions: 19/20 (used/limit). "
             + "Cannot add 6.", validationErrors.get(1));
         assertEquals("Invalid \"apply\" operation: exceeding quota for disk/topics: 18.555KiB/20.0KiB (used/limit). "
@@ -867,7 +912,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateUpdateTopicQuotaExceed() {
+    void shouldValidateUpdateTopicQuotaExceed() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -940,11 +985,11 @@ class ResourceQuotaServiceTest {
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid \"apply\" operation: exceeding quota for disk/topics: 18.555KiB/20.0KiB (used/limit). "
                 + "Cannot add 2.93KiB.",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void validateConnectorQuota() {
+    void shouldValidateConnectorQuota() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -975,7 +1020,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateConnectorQuotaNoQuota() {
+    void shouldValidateConnectorQuotaNoQuota() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -994,7 +1039,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void validateConnectorQuotaExceed() {
+    void shouldValidateConnectorQuotaExceed() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -1023,11 +1068,11 @@ class ResourceQuotaServiceTest {
         List<String> validationErrors = resourceQuotaService.validateConnectorQuota(ns);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid \"apply\" operation: exceeding quota for count/connectors: 2/2 (used/limit).",
-            validationErrors.get(0));
+            validationErrors.getFirst());
     }
 
     @Test
-    void getUsedResourcesByQuotaByNamespace() {
+    void shouldGetUsedResourcesByQuotaByNamespace() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -1099,7 +1144,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getCurrentResourcesQuotasByNamespaceNoQuota() {
+    void shouldGetCurrentResourcesQuotasByNamespaceNoQuota() {
         Namespace ns = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
@@ -1160,7 +1205,7 @@ class ResourceQuotaServiceTest {
     }
 
     @Test
-    void getUsedQuotaByNamespaces() {
+    void shouldGetUsedQuotaByNamespaces() {
         Namespace ns1 = Namespace.builder()
             .metadata(Metadata.builder()
                 .name("namespace")
